--- a/divelog/templates/divelog/dives.html
+++ b/divelog/templates/divelog/dives.html
@@ -1,12 +1,16 @@
 {% extends "divelog/base.html" %}
+
+{% load i18n %}
 {% load divelog_filters %}
-{% block title %}All dives{% endblock %}
+
+{% block title %}Dives{% endblock %}
 
 {% block css %}
 <link href="{{ STATIC_URL }}vendor/datatables/css/datatables.css" rel="stylesheet" />
 {% endblock %}
 
 {% block js %}
+{% if dives|length > 0 %}
 <script src="{{ STATIC_URL }}vendor/datatables/js/jquery.dataTables.min.js "></script>
 <script>
 $(document).ready(function() {
@@ -22,11 +26,11 @@ $(document).ready(function() {
     });
 });
 </script>
+{% endif %}
 {% endblock %}
 
 {% block content %}
-<h2>Dives</h2>
-
+{% if dives|length > 0 %}
 <table id="dives-table" class="table table-striped table-condensed table-bordered">
 	<thead>
 		<th>ID</th>
@@ -51,5 +55,7 @@ $(document).ready(function() {
 	{% endfor %}
 	</tbody>
 </table>
-
+{% else %}
+<p>{% trans "You currently have no dives. Consider importing some." %}</p>
+{% endif %}
 {% endblock %}
