--- a/divelog/templates/divelog/messages.html
+++ b/divelog/templates/divelog/messages.html
@@ -2,7 +2,7 @@
 {% for message in messages %}
 <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">
 	<button class="close" data-dismiss="alert">×</button>
-	{{ message }}
+	{{ message|safe }}
 </div>
 {% endfor %}
 {% endif %}
