--- a/divelog/templates/divelog/dives/list.html
+++ b/divelog/templates/divelog/dives/list.html
@@ -32,6 +32,9 @@ $(document).ready(function() {
 {% block content %}
 {% include "divelog/messages.html" %}
 {% if dives|length > 0 %}
+
+{{ highlight }}
+
 <table id="dives-table" class="table table-striped table-condensed table-bordered">
 	<thead>
 		<th>ID</th>
