--- a/divelog/staticfiles/css/divelog.css
+++ b/divelog/staticfiles/css/divelog.css
@@ -10,3 +10,49 @@ body { padding-top: 60px; }
 .container h1,
 .container h2,
 .container h3 { margin-bottom: 20px; }
+
+/* Sidebar navigation for settings pages 
+------------------------------------------*/
+.settings-sidenav {
+  padding: 0;
+  margin-right: 10px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+.settings-sidenav > li > a {
+  margin: 0;
+  font-size: 14px;
+  padding: 9px 14px;
+  border-top: 1px solid #eee;
+}
+.settings-sidenav > li:first-child > a {
+  border-top: 0;
+  -webkit-border-radius: 5px 5px 0 0;
+     -moz-border-radius: 5px 5px 0 0;
+          border-radius: 5px 5px 0 0;
+}
+.settings-sidenav > li:last-child > a {
+  -webkit-border-radius: 0 0 5px 5px;
+     -moz-border-radius: 0 0 5px 5px;
+          border-radius: 0 0 5px 5px;
+}
+/* Chevrons */
+.settings-sidenav .icon-chevron-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  opacity: .25;
+}
+.settings-sidenav > li > a:hover {
+  background-color: #f5f5f5;
+}
+.settings-sidenav a:hover .icon-chevron-right {
+  opacity: .5;
+}
+.settings-sidenav .active .icon-chevron-right {
+  background-image: url(../img/glyphicons-halflings-white.png);
+  opacity: .75;
+}
