--- a/divelog/templates/divelog/dives/view.html
+++ b/divelog/templates/divelog/dives/view.html
@@ -7,17 +7,13 @@
 	{% include "divelog/messages.html" %}
 	<table class="table table-bordered">
 		<colgroup>
-			<col class="span3" />
+			<col class="span2" />
 			<col />
 		</colgroup>
 		<tbody>
 			<tr>
-				<th>Fingerprint</th>
-				<td>{{ dive.fingerprint }}</td>
-			</tr>
-			<tr>
-				<th>Size</th>
-				<td>{{ dive.size }} samples</td>
+				<th>Location</th>
+				<td>{{ dive.location }}</td>
 			</tr>
 			<tr>
 				<th>Datetime</th>
