--- a/divelog/templates/divelog/uploads/list.html
+++ b/divelog/templates/divelog/uploads/list.html
@@ -31,5 +31,5 @@
     <p>No uploads.</p>
 {% endif %}
 
-<p><a href="{% url divelog.views.upload_add %}">Add new upload</a></p>
+<p><a class="btn" href="{% url divelog.views.upload_add %}"><i class="icon-upload"></i> New upload</a></p>
 {% endblock %}
