--- a/divelog/templates/divelog/dives/list.html
+++ b/divelog/templates/divelog/dives/list.html
@@ -38,7 +38,7 @@ $(document).ready(function() {
 <table id="dives-table" class="table table-striped table-condensed table-bordered">
 	<thead>
 		<th>ID</th>
-		<th>Fingerprint</th>
+		<th>Location</th>
 		<th>Date</th>
 		<th class="right">Max. depth</th>
 		<th class="right">Duration</th>
@@ -48,7 +48,7 @@ $(document).ready(function() {
 	{% for dive in dives %}
 		<tr>
 			<td>{{ dive.id }}</td>
-			<td>{{ dive.fingerprint }}</td>
+			<td>{{ dive.location }}</td>
 			<td>{{ dive.date_time|date:"Y-m-d H:i:s" }}</td>
 			<td class="right">{{ dive.max_depth|floatformat:2 }} m</td>
 			<td class="right">{{ dive.duration|formatTime }}</td>
