Added a locations as a separate model, reworked the import to work with subsurface parser.

--- a/divelog/templates/divelog/dives/view.html
+++ b/divelog/templates/divelog/dives/view.html
@@ -20,7 +20,15 @@
 			</tr>
 			<tr>
 				<th>Maximum depth</th>
-				<td>{{ dive.max_depth }}m</td>
+				<td>{{ dive.max_depth }} m</td>
+			</tr>
+			<tr>
+				<th>Average depth</th>
+				<td>{{ dive.avg_depth }} m</td>
+			</tr>
+			<tr>
+				<th>Temperature</th>
+				<td>{{ dive.temperature }}°C</td>
 			</tr>
 			<tr>
 				<th>Duration</th>
