--- a/divelog/templates/divelog/dives/view.html
+++ b/divelog/templates/divelog/dives/view.html
@@ -32,7 +32,7 @@
 			</tr>
 			<tr>
 				<th>Duration</th>
-				<td>{{ dive.duration|formatTime }}</td>
+				<td>{{ dive.duration|sec_to_min }} min</td>
 			</tr>
 			<tr>
 				<th>Description</th>
