--- a/divelog/templates/divelog/base.html
+++ b/divelog/templates/divelog/base.html
@@ -24,6 +24,7 @@
 					<div class="nav-collapse">
 						<ul class="nav">
 							<li><a href="{% url divelog.views.dive_list %}">Dives</a></li>
+							<li><a href="{% url divelog.views.location_list %}">Locations</a></li>
 							<li><a href="{% url divelog.views.upload_list %}">Uploads</a></li>
 						</ul>
 					</div>
