--- a/divelog/staticfiles/css/divelog.css
+++ b/divelog/staticfiles/css/divelog.css
@@ -3,6 +3,8 @@ body { padding-top: 60px; }
 .right { text-align: right; }
 .center { text-align: center; }
 
+.smaller { font-size: smaller;}
+
 .table th.left, .table td.left { text-align: left; }
 .table th.right, .table td.right { text-align: right; }
 .table th.center, .table td.center { text-align: center; }
@@ -22,49 +24,16 @@ body { padding-top: 60px; }
 
 #location-map { width: 100%; height: 400px; margin: 20px 0 10px 0; }
 
+/* User settings 
+---------------------------------*/
+.settings-profile { border: 1px solid #e5e5e5; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; margin: 0 10px 10px 0; padding: 10px; }
+.settings-avatar { float: left; margin-right: 10px; }
 
-/* Sidebar navigation for settings pages 
-------------------------------------------*/
-.settings-sidenav {
-  padding: 0;
-  margin-right: 10px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-}
-.settings-sidenav > li > a {
-  margin: 0;
-  font-size: 14px;
-  padding: 9px 14px;
-  border-top: 1px solid #eee;
-}
-.settings-sidenav > li:first-child > a {
-  border-top: 0;
-  -webkit-border-radius: 5px 5px 0 0;
-     -moz-border-radius: 5px 5px 0 0;
-          border-radius: 5px 5px 0 0;
-}
-.settings-sidenav > li:last-child > a {
-  -webkit-border-radius: 0 0 5px 5px;
-     -moz-border-radius: 0 0 5px 5px;
-          border-radius: 0 0 5px 5px;
-}
-/* Chevrons */
-.settings-sidenav .icon-chevron-right {
-  float: right;
-  margin-top: 2px;
-  margin-right: -6px;
-  opacity: .25;
-}
-.settings-sidenav > li > a:hover {
-  background-color: #f5f5f5;
-}
-.settings-sidenav a:hover .icon-chevron-right {
-  opacity: .5;
-}
-.settings-sidenav .active .icon-chevron-right {
-  background-image: url(../img/glyphicons-halflings-white.png);
-  opacity: .75;
-}
+.settings-sidenav { padding: 0; margin-right: 10px; background-color: #fff; border: 1px solid #e5e5e5; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; }
+.settings-sidenav > li > a { margin: 0; font-size: 14px; padding: 9px 14px; border-top: 1px solid #eee; }
+.settings-sidenav > li:first-child > a { -webkit-border-radius: 5px 5px 0 0; -moz-border-radius: 5px 5px 0 0; border-radius: 5px 5px 0 0; border-top: 0; }
+.settings-sidenav > li:last-child > a { -webkit-border-radius: 0 0 5px 5px; -moz-border-radius: 0 0 5px 5px; border-radius: 0 0 5px 5px; }
+.settings-sidenav .icon-chevron-right { float: right; margin-top: 2px; margin-right: -6px; opacity: .25; }
+.settings-sidenav > li > a:hover { background-color: #f5f5f5 }
+.settings-sidenav a:hover .icon-chevron-right { opacity: .5; }
+.settings-sidenav .active .icon-chevron-right { opacity: .75; background-image: url(../vendor/bootstrap/img/glyphicons-halflings-white.png) }
