Fixed templates to use newly named templatetags.

--- a/divelog/templates/divelog/dives/list.html
+++ b/divelog/templates/divelog/dives/list.html
@@ -1,7 +1,6 @@
 {% extends "divelog/base.html" %}
 
-{% load i18n %}
-{% load divelog_filters %}
+{% load utils %}
 
 {% block title %}Dives{% endblock %}
 
