--- a/divelog/templates/divelog/locations/view.html
+++ b/divelog/templates/divelog/locations/view.html
@@ -1,5 +1,5 @@
 {% extends "divelog/base.html" %}
-{% load divelog_filters %}
+{% load utils %}
 
 {% block title %}{{ location.name }}{% endblock %}
 
